--- a/materialize.css
+++ b/materialize.css
@@ -3159,7 +3159,6 @@ nav ul a span.badge {
 }
 
 .section {
-  padding-top: 1rem;
   padding-bottom: 1rem
 }
 
@@ -4188,36 +4187,6 @@ nav .input-field label.active i {
   }
 }
 
-@font-face {
-  font-family: "Roboto";
-  src: local(Roboto Thin), url("../fonts/roboto/Roboto-Thin.woff2") format("woff2"), url("../fonts/roboto/Roboto-Thin.woff") format("woff");
-  font-weight: 100
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local(Roboto Light), url("../fonts/roboto/Roboto-Light.woff2") format("woff2"), url("../fonts/roboto/Roboto-Light.woff") format("woff");
-  font-weight: 300
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local(Roboto Regular), url("../fonts/roboto/Roboto-Regular.woff2") format("woff2"), url("../fonts/roboto/Roboto-Regular.woff") format("woff");
-  font-weight: 400
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local(Roboto Medium), url("../fonts/roboto/Roboto-Medium.woff2") format("woff2"), url("../fonts/roboto/Roboto-Medium.woff") format("woff");
-  font-weight: 500
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local(Roboto Bold), url("../fonts/roboto/Roboto-Bold.woff2") format("woff2"), url("../fonts/roboto/Roboto-Bold.woff") format("woff");
-  font-weight: 700
-}
-
 a {
   text-decoration: none
 }
@@ -4767,10 +4736,19 @@ small {
   border-radius: 24px
 }
 
+
+
 @media only screen and (max-width:600px) {
   .toast {
     width: 100%;
     border-radius: 0
+  }
+  .title-blog {
+    padding-top: 50px;
+  }
+  .card-content p {
+    font-size: 1em;
+    margin-top: 3em;
   }
 }
 
